--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "scss": "node-sass --watch public/scss -o public/css"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,35 @@
   },
   "homepage": "https://github.com/enas48/chat-group#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "jquery": "^3.5.1",
+    "moment": "^2.28.0",
+    "mongodb": "^3.6.0",
+    "mongoose": "^5.10.5",
+    "multer": "^1.4.2",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
-    "pug": "^3.0.0"
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "passport.socketio": "^3.7.0",
+    "pug": "^3.0.0",
+    "rfs": "^9.0.3",
+    "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5"
   }
 }
