--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chat-group",
   "version": "1.0.0",
   "description": "send and receive text with authentication to app",
-  "main": "server,js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
