--- a/package.json
+++ b/package.json
@@ -45,9 +45,7 @@
     "passport.socketio": "^3.7.0",
     "pug": "^3.0.0",
     "rfs": "^9.0.3",
-    "socket.io": "^2.3.0"
-  },
-  "devDependencies": {
+    "socket.io": "^2.3.0",
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5"
   }
